--- a/Learning CSS/index.html
+++ b/Learning CSS/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Learning CSS</h1>
+        <h1 id="titulo">Learning CSS</h1>
 
         <ul>
             <li><a href="#"> Inicio </a></li>
@@ -18,17 +18,27 @@
 
         <div id="descripcion">
             <h2>Descripcion del curso</h2>
-            <p>
+            <p class="parrafo parrafo1">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et est vitae elit luctus varius vel in dolor. Vivamus imperdiet finibus sem. Donec faucibus, libero non consectetur pretium, ex eros porttitor elit, et luctus est dui ac lectus. Aenean purus nisi, feugiat ut scelerisque posuere, dignissim sagittis mauris. Integer et aliquet massa. Duis quis eros ac eros tincidunt interdum. Phasellus sodales tincidunt elit sit amet consectetur. Nulla pharetra posuere leo, vitae aliquet lacus. Nullam vulputate enim id orci venenatis tempus. Donec vel diam sapien. Duis at enim nec est aliquam vulputate. Aliquam id quam maximus, tempus mauris eleifend, rutrum purus. Curabitur fringilla in sem nec convallis. Duis sagittis justo eu libero dignissim dignissim. Donec rhoncus consequat lacus, ac facilisis urna rhoncus quis. Donec eget pharetra turpis.
             </p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et est vitae elit luctus varius vel in dolor. Vivamus imperdiet finibus sem. Donec faucibus, libero non consectetur pretium, ex eros porttitor elit, et luctus est dui ac lectus. Aenean purus nisi, feugiat ut scelerisque posuere, dignissim sagittis mauris. Integer et aliquet massa. Duis quis eros ac eros tincidunt interdum. Phasellus sodales tincidunt elit sit amet consectetur. Nulla pharetra posuere leo, vitae aliquet lacus. Nullam vulputate enim id orci venenatis tempus. Donec vel diam sapien. Duis at enim nec est aliquam vulputate. Aliquam id quam maximus, tempus mauris eleifend, rutrum purus. Curabitur fringilla in sem nec convallis. Duis sagittis justo eu libero dignissim dignissim. Donec rhoncus consequat lacus, ac facilisis urna rhoncus quis. Donec eget pharetra turpis.
             </p>
-            <p>
+            <p class="parrafo parrafo3">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin et est vitae elit luctus varius vel in dolor. Vivamus imperdiet finibus sem. Donec faucibus, libero non consectetur pretium, ex eros porttitor elit, et luctus est dui ac lectus. Aenean purus nisi, feugiat ut scelerisque posuere, dignissim sagittis mauris. Integer et aliquet massa. Duis quis eros ac eros tincidunt interdum. Phasellus sodales tincidunt elit sit amet consectetur. Nulla pharetra posuere leo, vitae aliquet lacus. Nullam vulputate enim id orci venenatis tempus. Donec vel diam sapien. Duis at enim nec est aliquam vulputate. Aliquam id quam maximus, tempus mauris eleifend, rutrum purus. Curabitur fringilla in sem nec convallis. Duis sagittis justo eu libero dignissim dignissim. Donec rhoncus consequat lacus, ac facilisis urna rhoncus quis. Donec eget pharetra turpis.
             </p>
         </div>
 
+        <div id ="usuario">
+            <form>
+                <label>Nombre</label>
+                <input type="text" name="nombre">
+                <label>Apellidos</label>
+                <input type="text" name="apellidos">
+                <input type="submit" value="Enviar">
+            </form>
+
+        </div>
         <footer>
             Todos los derechos reservados &copy; <a href="https://twitter.com/vanccipm">Ivan Pacheco </a>
         </footer>
