--- a/Learning CSS/04-cajas/index.html
+++ b/Learning CSS/04-cajas/index.html
@@ -20,11 +20,46 @@
                     Contenido de la caja 2
                 </p>
             </div>
+            <div class="caja">
+                <p>
+                    Contenido de la caja 3
+                </p>
+            </div>
+            <div class="caja">
+                <p>
+                    Contenido de la caja 4
+                </p>
+            </div>
+            <div class="caja">
+                <p>
+                    Contenido de la caja 5
+                </p>
+            </div>
+            <div class="caja">
+                <p>
+                    Contenido de la caja 6
+                </p>
+            </div>
+            <div class="caja">
+                <p>
+                    Contenido de la caja 7
+                </p>
+            </div>
+            <div class="caja">
+                <p>
+                    Contenido de la caja 8
+                </p>
+            </div>
+            <div class="caja">
+                <p>
+                    Contenido de la caja 9
+                </p>
+            </div>
+
+            <div class="clearfix"></div>
+    
         </section>
 
-        <!-- LIMPIAR FLOTADOS -->
-
-        <div class="clearfix"></div>
         <!-- ELEMENTOS NO FLOTADOS QUE SE MANTENGAN ABAJO -->
         <h2|>Contenido despues de las cajas posicionadas</h2>
         <p>Texto de prueba</p>
