--- a/Learning CSS/05-ejercicio/index.html
+++ b/Learning CSS/05-ejercicio/index.html
@@ -22,6 +22,7 @@
             </nav>
 
             <section id="contenido">
+                <h1>Cajas del contenido principal</h1>
                 <div class="caja">
                     <h2>Caja 1</h2>
                 </div>
@@ -49,11 +50,13 @@
                 </div>
             </section>
 
-            <sidebar id="lateral">
+            <aside id="lateral">
                 <div class="caja">
                     <h2>Elemento de la barra lateral</h2>
                 </div>
-            </sidebar>
+            </aside>
+
+            <div class="clearfix"></div>
 
             <footer id="footer">
                 Todos los derechos reservados &copy; Iván Pacheco Maldonado
