--- a/Learning CSS/05-ejercicio/index.html
+++ b/Learning CSS/05-ejercicio/index.html
@@ -1,66 +1,102 @@
 <!DOCTYPE html>
 <html lang="es">
-    <head>
-        <meta charset="utf-8">
-        <title>Ejercicio con HTML y CSS</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-        <div id="general">
 
-            <header id="header">
-                <h1>Ejercicio con HTML y CSS</h1>
-            </header>
-            <nav id="menu">
-                <ul>
-                    <li> <a href="#">Inicio</a></li>
-                    <li> <a href="#">Articulos</a></li>
-                    <li> <a href="#">Categorias</a></li>
-                    <li> <a href="#">Contacto</a></li>
-                </ul>
-                <div class="clearfix"></div>
-            </nav>
+<head>
+    <meta charset="utf-8">
+    <title>Ejercicio con HTML y CSS</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
-            <section id="contenido">
-                <h1>Cajas del contenido principal</h1>
-                <div class="caja">
-                    <h2>Caja 1</h2>
-                </div>
-                <div class="caja sombra-interior">
-                    <h2>Caja 2</h2>
-                </div>
-                <div class="caja">
-                    <h2>Caja 3</h2>
-                </div>
-                <div class="caja">
-                    <h2>Caja 4</h2>
-                </div>
+<body>
+    <div id="general">
 
-                <div class="caja">
-                    <h2>Caja 5<h2>
-                </div>
-                <div class="caja">
-                    <h2>Caja 6<h2>
-                </div>
-                <div class="caja">
-                    <h2>Caja 7</h2>
-                </div>
-                <div class="caja">
-                    <h2>Caja 8</h2>
-                </div>
-            </section>
-
-            <aside id="lateral">
-                <div class="caja">
-                    <h2>Elemento de la barra lateral</h2>
-                </div>
-            </aside>
-
+        <header id="header">
+            <h1>Ejercicio con HTML y CSS</h1>
+        </header>
+        <nav id="menu">
+            <ul>
+                <li> <a href="#">Inicio</a></li>
+                <li> <a href="#">Articulos</a></li>
+                <li> <a href="#">Categorias</a></li>
+                <li> <a href="#">Contacto</a></li>
+            </ul>
             <div class="clearfix"></div>
+        </nav>
 
-            <footer id="footer">
-                Todos los derechos reservados &copy; Iván Pacheco Maldonado
-            </footer>
-        </div>
-    </body>
+        <section id="contenido">
+            <h1>Cajas del contenido principal</h1>
+            <div class="caja">
+                <h2>Caja 1</h2>
+            </div>
+            <div class="caja sombra-interior">
+                <h2>Caja 2</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 3</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 4</h2>
+            </div>
+
+            <div class="caja">
+                <h2>Caja 5<h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 6<h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 7</h2>
+            </div>
+            <div class="caja">
+                <h2>Caja 8</h2>
+            </div>
+        </section>
+
+        <aside id="lateral">
+            <div class="caja">
+                <h2>Elemento de la barra lateral</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam non nibh a eros malesuada laoreet.
+                    Morbi sapien odio, tincidunt quis ornare at, laoreet at ligula. Integer id ante ut lacus elementum
+                    laoreet nec in risus. Phasellus iaculis est non tincidunt hendrerit. Morbi at odio at magna sodales
+                    faucibus in nec libero. Nam commodo finibus est a pharetra. Mauris bibendum mi vitae lectus
+                    pellentesque, vel tempus dui consectetur. Fusce viverra purus arcu, dapibus pretium libero porta
+                    eget. Integer molestie, leo vitae egestas commodo, dui mi gravida sapien, nec auctor est mi a arcu.
+                    Donec et velit id neque cursus pretium imperdiet sit amet metus. Pellentesque sagittis libero in
+                    dolor congue porta. Cras egestas ornare tortor, vitae feugiat neque euismod at. Curabitur luctus,
+                    orci et varius iaculis, purus ante blandit augue, a tempus diam tortor viverra purus. Vestibulum
+                    iaculis, erat a placerat porttitor, ligula dui lacinia enim, et ultricies felis ante et tortor.
+
+                    Duis sit amet erat nec metus vehicula interdum mollis eu felis. In porta vulputate orci et cursus.
+                    Curabitur dictum magna id euismod posuere. Pellentesque magna risus, gravida ac vulputate vitae,
+                    semper at ipsum. Vivamus rutrum auctor efficitur. Vestibulum ac lorem eu est euismod eleifend. Ut
+                    nec lectus aliquam, accumsan turpis sit amet, fringilla mi. Morbi arcu purus, euismod sit amet
+                    blandit eu, bibendum et odio. Mauris et orci nisi. Vivamus blandit ex in magna volutpat, nec commodo
+                    ex malesuada.
+
+                    Integer finibus eros tortor. Fusce porta, leo in dignissim posuere, velit erat hendrerit quam,
+                    sagittis dignissim massa lectus eu lorem. Proin quam elit, molestie ac orci sed, maximus venenatis
+                    sapien. Pellentesque cursus fermentum risus a cursus. Aliquam iaculis orci ligula, id sollicitudin
+                    nisi molestie ac. Sed eget blandit felis, quis consectetur dolor. Maecenas sed mi congue, mattis
+                    lorem ac, vestibulum nisi. Vestibulum diam neque, consequat nec velit ac, aliquet sollicitudin
+                    neque. Sed non dictum purus, vitae lacinia mauris. Sed vehicula urna quis urna maximus molestie.
+                    Proin varius pretium orci, quis tempus lorem pretium et.
+
+                    Curabitur dictum, dolor sit amet maximus maximus, lacus ante pharetra ipsum, accumsan malesuada nunc
+                    magna eget tellus. Donec vitae porta justo. Vestibulum ante ipsum primis in faucibus orci luctus et
+                    ultrices posuere cubilia curae; Aliquam dignissim sit amet nibh quis condimentum. Fusce lacinia eros
+                    ut diam hendrerit dapibus. Morbi nec justo at lorem pharetra ullamcorper vitae non lacus. Nulla
+                    imperdiet auctor nisl, ac imperdiet neque volutpat sed. Quisque porttitor est nec mattis convallis.
+                </p>
+            </div>
+        </aside>
+
+        <div class="clearfix"></div>
+
+        <footer id="footer">
+            Todos los derechos reservados &copy; Iván Pacheco Maldonado
+        </footer>
+    </div>
+</body>
+
 </html>
