--- a/Learning CSS/05-ejercicio/index.html
+++ b/Learning CSS/05-ejercicio/index.html
@@ -97,6 +97,12 @@
             Todos los derechos reservados &copy; Iván Pacheco Maldonado
         </footer>
     </div>
+    <div class="libre libre1">
+        Caja libre
+    </div>
+    <div class="libre libre2">
+        Caja libre
+    </div>
 </body>
 
 </html>
