--- a/Learning CSS/05-ejercicio/index.html
+++ b/Learning CSS/05-ejercicio/index.html
@@ -103,6 +103,10 @@
     <div class="libre libre2">
         Caja libre
     </div>
+
+    <div class="fija">
+        Caja fija
+    </div>
 </body>
 
 </html>
