--- a/Learning CSS/07-animaciones/index.html
+++ b/Learning CSS/07-animaciones/index.html
@@ -7,8 +7,12 @@
     </head>
     <body>
         <h1>Transiciones y Animaciones</h1>
-        
-        <a id="boton" href="#"> Ir a una web</a>
+        <div>
+            <a id="boton" href="#"> Ir a una web</a>
+        </div>
+        <div id="caja"> 
+            Ejemplo caja
+        </div>
         
     </body>
 
