--- a/Maquetacion-1/index.html
+++ b/Maquetacion-1/index.html
@@ -40,7 +40,7 @@
                     <a href="index.html">Frameworks</a>
                 </li>
                 <li>
-                    <a href="index.html">Proyectos/a>
+                    <a href="index.html">Proyectos</a>
                 </li>
                 <li>
                     <a href="index.html">El instructor</a>
