--- a/Maquetacion-1/index.html
+++ b/Maquetacion-1/index.html
@@ -93,7 +93,7 @@
                         <label>Contraseña</label>
                         <input type="password">
 
-                        <input type="submit" value="Entrrar">
+                        <input type="submit" value="Entrar">
 
                     </form>
                     <a href="#">Zona de alumnos</a>
