--- a/Maquetacion-1/index.html
+++ b/Maquetacion-1/index.html
@@ -147,6 +147,10 @@
             </aside>
             <!-- Fin de la barra lateral -->
 
+            <aside id="frase">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                <a href="#">Leer más frases</a>
+            </aside>
         </div>
         <!-- fin del contenido central -->
     </body>
