--- a/Maquetacion-1/index.html
+++ b/Maquetacion-1/index.html
@@ -101,7 +101,7 @@
                     <a href="#">Acceso a calificaciones</a> 
                 </div>
                 <div  class="widget" id="login">
-                    <h3>Aula virtual 1</h3>
+                    <h3 class="blue">Aula virtual 1</h3>
                     <form onsubmit="return false">
                         <label>Nombre de usuario</label>
                         <input type="text">
@@ -115,7 +115,7 @@
                 </div>
 
                 <div  class="widget" id="login">
-                    <h3>Aula virtual 2</h3>
+                    <h3 class="red">Aula virtual 2</h3>
                     <form onsubmit="return false">
                         <label>Nombre de usuario</label>
                         <input type="text">
