--- a/Maquetacion-1/index.html
+++ b/Maquetacion-1/index.html
@@ -145,8 +145,135 @@
                     </ul>
                 </div>
             </aside>
+            
             <!-- Fin de la barra lateral -->
+            <!-- Inicio de las secciones -->
 
+            <div id="sections">
+                <section id="frontend">
+                    <span class="stickers">
+                        <img class="stickerOne" src="img/scotch.png" alt="pegatina">
+                        <img class="stickerTwo" src="img/scotch.png" alt="pegatina">
+
+                    </span>
+                    <h2 class="titulo">Noticias de Frontend</h2>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                </section>
+
+                <section id="backend">
+                    <span class="stickers">
+                        <img class="stickerOne" src="img/scotch.png" alt="pegatina">
+                        <img class="stickerTwo" src="img/scotch.png" alt="pegatina">
+
+                    </span>
+                    <h2 class="titulo red">Noticias de Backend</h2>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                </section>
+
+                <section id="instructor">
+                    <span class="stickers">
+                        <img class="stickerOne" src="img/scotch.png" alt="pegatina">
+                        <img class="stickerTwo" src="img/scotch.png" alt="pegatina">
+
+                    </span>
+                    <h2 class="titulo orange">Noticias del Instructor</h2>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                    <article class="article">
+                        <span class="icon">a</span>
+                        <p>
+                            <a href="#">Titulo de la entrada</a>
+                            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
+                        </p>
+                        <span class="date">[20-02-2021. Ivan Pacheco]</span>
+                    </article>
+                </section>
+            </div>
+            <!-- Fin de las secciones -->
             <aside id="frase">
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
                 <a href="#">Leer más frases</a>
