--- a/Maquetacion-1/index.html
+++ b/Maquetacion-1/index.html
@@ -278,7 +278,22 @@
                 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy
                 <a href="#">Leer más frases</a>
             </aside>
+
+            <div class="clearfix"></div>
+
+            <div id="history">
+                <a href="#">Ver historico de noticias</a>
+            </div>
         </div>
         <!-- fin del contenido central -->
+
+        <footer id="footer">
+            <p>
+                &copy; Desarrollado por Ivan Pacheco
+            </p>
+            <p>
+                Repositorio con el contenido en: <a href="https://github.com/IvanPMa">https://github.com/IvanPMa</a>
+            </p>
+        </footer>
     </body>
 </html>
