--- a/Maquetacion-1/index.html
+++ b/Maquetacion-1/index.html
@@ -285,7 +285,9 @@
                 <a href="#">Ver historico de noticias</a>
             </div>
         </div>
-        <!-- fin del contenido central -->      
+        <!-- fin del contenido central -->    
+        
+        <div class="clearfix"></div>
         <footer id="footer">
             <p>
                 &copy; Desarrollado por Ivan Pacheco
