--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -8,6 +8,23 @@
 
     </head>
     <body>
-        <h1>Maquetacion + Responsive</h1>
+        <!-- INICIO DE CABECERA -->
+        <header id="header">
+            <div class="warap">
+                <div id="logo">
+                    <span class="gear">S</span>
+                    <h3>BLOG</h3>
+                </div>
+                <nav id="menu">
+                    <ul>
+                        <li><a href="#">INICIO</a></li>
+                        <li><a href="#">BLOG</a></li>
+                        <li><a href="#">FORMACIÓN</a></li>
+                        <li><a href="#">CONTACTO</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <!-- FIN DE LA CABECERA -->
     </body>
 </html>
