--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -10,7 +10,7 @@
     <body>
         <!-- INICIO DE CABECERA -->
         <header id="header">
-            <div class="warap">
+            <div class="wrap">
                 <div id="logo">
                     <span class="gear">S</span>
                     <h3>BLOG</h3>
