--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -28,7 +28,7 @@
         <!-- FIN DE LA CABECERA -->
 
         <!-- Inicio Banner -->
-        <section class="wrap">
+        <section class="wrap wrap-content">
             <section id="info">
                 <div id="banner">
                     <h1>MASTER EN CSS - IVAN PACHECO</h1>
