Aside only html

--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -27,12 +27,15 @@
         </header>
         <!-- FIN DE LA CABECERA -->
 
-        <!-- Inicio Banner -->
+        
         <section class="wrap wrap-content">
             <section id="info">
+                <!-- Inicio Banner -->
                 <div id="banner">
                     <h1>MASTER EN CSS - IVAN PACHECO</h1>
                 </div>
+                <!-- Fin Banner -->
+                <!-- Inicio Tarjetas -->
                 <div id="cards">
                     <div class="card">
                         <p class="icon">H</p>
@@ -70,7 +73,57 @@
                         </p>
                     </div>
                 </div>
+                <!-- Fin Tarjetas -->
             </section>
+            <!-- Inicio Barra Lateral -->
+            <aside id="lateral">
+
+                <h3>BUSCAR</h3>
+                <div id="search">
+                    <form>
+                        <input type="text">
+                        <input type="button" value="L">
+                    </form>
+                </div>
+
+                <h3>LOGIN</h3>
+                <div id="login">
+                    <form>
+                        <label id="user">U</label>
+                        <input type="email">
+
+                        <label id="password">w</label>
+                        <input type="passwprd">
+
+                        <input type="submit" value="Entrar">
+                        <input type="reset" value="Limpiar">
+
+                        <a href="#">Registarte aquí</a>
+                        <a href="#">¿Has olvidado tu contraseña?</a>
+                    </form>
+                </div>
+
+                <h3>REDES SOCIALES</h3>
+                <div class="social">
+                    <div class="twitter">
+                        <a href="#">t</a>
+                    </div>
+                    <div class="facebook">
+                        <a href="#">f</a>
+                    </div>
+                    <div class="youtube">
+                        <a href="#">y</a>
+                    </div>
+                </div>
+
+                <h3>PATROCINADORES</h3>
+                <div id="sponsors">
+                    
+                </div>
+
+            </aside>
+            <!-- Fin Barra Lateral -->
+
         </section>
         <!-- Fin Banner -->
     </body>
