--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -82,17 +82,17 @@
                 <div id="search">
                     <form>
                         <input type="text">
-                        <input type="button" value="L">
+                        <input type="button" value="L" class="icon">
                     </form>
                 </div>
 
                 <h3>LOGIN</h3>
                 <div id="login">
                     <form>
-                        <label id="user">U</label>
+                        <label id="user" class="icon">U</label>
                         <input type="email">
 
-                        <label id="password">w</label>
+                        <label id="password" class="icon">w</label>
                         <input type="passwprd">
 
                         <input type="submit" value="Entrar">
@@ -106,19 +106,19 @@
                 <h3>REDES SOCIALES</h3>
                 <div class="social">
                     <div class="twitter">
-                        <a href="#">t</a>
+                        <a href="#" class="icon">t</a>
                     </div>
                     <div class="facebook">
-                        <a href="#">f</a>
+                        <a href="#" class="icon">f</a>
                     </div>
                     <div class="youtube">
-                        <a href="#">y</a>
+                        <a href="#" class="icon">y</a>
                     </div>
                 </div>
 
                 <h3>PATROCINADORES</h3>
                 <div id="sponsors">
-                    
+
                 </div>
 
             </aside>
