--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -87,13 +87,13 @@
                 </div>
 
                 <h3>LOGIN</h3>
-                <div id="login">
+                <div id="login" class="aside-box">
                     <form>
                         <label id="user" class="icon">U</label>
-                        <input type="email">
+                        <input type="email" class="mail">
 
                         <label id="password" class="icon">w</label>
-                        <input type="passwprd">
+                        <input type="password">
 
                         <input type="submit" value="Entrar">
                         <input type="reset" value="Limpiar">
@@ -104,7 +104,7 @@
                 </div>
 
                 <h3>REDES SOCIALES</h3>
-                <div class="social">
+                <div id="social" class="aside-box">
                     <div class="twitter">
                         <a href="#" class="icon">t</a>
                     </div>
@@ -117,7 +117,7 @@
                 </div>
 
                 <h3>PATROCINADORES</h3>
-                <div id="sponsors">
+                <div id="sponsors" class="aside-box">
 
                 </div>
 
