--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -1,130 +1,232 @@
 <!DOCTYPE html>
-<html lang ="es">
-    <head> 
-        <meta charset="utf-8">
-        <title>Master en CSS</title>
-        <link rel="icon" type="favicon/x-icon" href="img/supertux.png">
-        <link rel="stylesheet" type="text/css" href="css/styles.css">
+<html lang="es">
 
-    </head>
-    <body>
-        <!-- INICIO DE CABECERA -->
-        <header id="header">
-            <div class="wrap">
-                <div id="logo">
-                    <span class="gear">S</span>
-                    <h3>BLOG</h3>
-                </div>
-                <nav id="menu">
-                    <ul>
-                        <li><a href="#">INICIO</a></li>
-                        <li><a href="#">BLOG</a></li>
-                        <li><a href="#">FORMACIÓN</a></li>
-                        <li><a href="#">CONTACTO</a></li>
-                    </ul>
-                </nav>
+<head>
+    <meta charset="utf-8">
+    <title>Master en CSS</title>
+    <link rel="icon" type="favicon/x-icon" href="img/supertux.png">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+</head>
+
+<body>
+    <!-- INICIO DE CABECERA -->
+    <header id="header">
+        <div class="wrap">
+            <div id="logo">
+                <span class="gear">S</span>
+                <h3>BLOG</h3>
             </div>
-        </header>
-        <!-- FIN DE LA CABECERA -->
+            <nav id="menu">
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">FORMACIÓN</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- FIN DE LA CABECERA -->
 
-        
-        <section class="wrap wrap-content">
-            <section id="info">
-                <!-- Inicio Banner -->
-                <div id="banner">
-                    <h1>MASTER EN CSS - IVAN PACHECO</h1>
+
+    <section class="wrap wrap-content">
+        <section id="info">
+            <!-- Inicio Banner -->
+            <div id="banner">
+                <h1>MASTER EN CSS - IVAN PACHECO</h1>
+            </div>
+            <!-- Fin Banner -->
+            <!-- Inicio Tarjetas -->
+            <div id="cards">
+                <div class="card">
+                    <p class="icon">H</p>
+                    <h2 class="category">Desarrollo web</h2>
+                    <p class="description">
+                        Aprende los principales lenguajes para desarrollar webs ¡Conviertete en un webmaster!
+                    </p>
                 </div>
-                <!-- Fin Banner -->
-                <!-- Inicio Tarjetas -->
-                <div id="cards">
-                    <div class="card">
-                        <p class="icon">H</p>
-                        <h2 class="category">Desarrollo web</h2>
-                        <p class="description">
-                            Aprende los principales lenguajes para desarrollar webs ¡Conviertete en un webmaster!
-                        </p>
-                    </div>
-                    <div class="card">
-                        <p class="icon">_</p>
-                        <h2 class="category">Sistemas Operativos</h2>
-                        <p class="description">
-                            Aprende a administrar sistemas Linux y Windows
-                        </p>
-                    </div>
-                    <div class="card">
-                        <p class="icon">S</p>
-                        <h2 class="category">Hardware</h2>
-                        <p class="description">
-                            Conoce los entresijos del Hardware
-                        </p>
-                    </div>
-                    <div class="card">
-                        <p class="icon">u</p>
-                        <h2 class="category">Redes e Internet</h2>
-                        <p class="description">
-                            Aprende a configurar y administrar redes informaticas y servidores
-                        </p>
-                    </div>
-                    <div class="card">
-                        <p class="icon">a</p>
-                        <h2 class="category">Bases de datos</h2>
-                        <p class="description">
-                            Aprende a montar administrar bases de datos
-                        </p>
-                    </div>
+                <div class="card">
+                    <p class="icon">_</p>
+                    <h2 class="category">Sistemas Operativos</h2>
+                    <p class="description">
+                        Aprende a administrar sistemas Linux y Windows
+                    </p>
                 </div>
-                <!-- Fin Tarjetas -->
-            </section>
-            <!-- Inicio Barra Lateral -->
-            <aside id="lateral">
-
-                <h3>BUSCAR</h3>
-                <div id="search">
-                    <form>
-                        <input type="text">
-                        <input type="button" value="L" class="icon">
-                    </form>
+                <div class="card">
+                    <p class="icon">S</p>
+                    <h2 class="category">Hardware</h2>
+                    <p class="description">
+                        Conoce los entresijos del Hardware
+                    </p>
                 </div>
-
-                <h3>LOGIN</h3>
-                <div id="login" class="aside-box">
-                    <form>
-                        <label id="user" class="icon">U</label>
-                        <input type="email" class="mail">
-
-                        <label id="password" class="icon">w</label>
-                        <input type="password">
-
-                        <input type="submit" value="Entrar">
-                        <input type="reset" value="Limpiar">
-
-                        <a href="#">Registarte aquí</a>
-                        <a href="#">¿Has olvidado tu contraseña?</a>
-                    </form>
+                <div class="card">
+                    <p class="icon">u</p>
+                    <h2 class="category">Redes e Internet</h2>
+                    <p class="description">
+                        Aprende a configurar y administrar redes informaticas y servidores
+                    </p>
                 </div>
-
-                <h3>REDES SOCIALES</h3>
-                <div id="social" class="aside-box">
-                    <div class="twitter">
-                        <a href="#" class="icon">t</a>
-                    </div>
-                    <div class="facebook">
-                        <a href="#" class="icon">f</a>
-                    </div>
-                    <div class="youtube">
-                        <a href="#" class="icon">y</a>
-                    </div>
+                <div class="card">
+                    <p class="icon">a</p>
+                    <h2 class="category">Bases de datos</h2>
+                    <p class="description">
+                        Aprende a montar administrar bases de datos
+                    </p>
                 </div>
-
-                <h3>PATROCINADORES</h3>
-                <div id="sponsors" class="aside-box">
-
-                </div>
-
-            </aside>
-            <!-- Fin Barra Lateral -->
-
+            </div>
+            <!-- Fin Tarjetas -->
         </section>
-        <!-- Fin Banner -->
-    </body>
+        <!-- Inicio Barra Lateral -->
+        <aside id="lateral">
+
+            <h3>BUSCAR</h3>
+            <div id="search">
+                <form>
+                    <input type="text">
+                    <input type="button" value="L" class="icon">
+                </form>
+            </div>
+
+            <h3>LOGIN</h3>
+            <div id="login" class="aside-box">
+                <form>
+                    <label id="user" class="icon">U</label>
+                    <input type="email" class="mail">
+
+                    <label id="password" class="icon">w</label>
+                    <input type="password">
+
+                    <input type="submit" value="Entrar">
+                    <input type="reset" value="Limpiar">
+
+                    <a href="#">Registarte aquí</a>
+                    <a href="#">¿Has olvidado tu contraseña?</a>
+                </form>
+            </div>
+
+            <h3>REDES SOCIALES</h3>
+            <div id="social" class="aside-box">
+                <div class="twitter">
+                    <a href="#" class="icon">t</a>
+                </div>
+                <div class="facebook">
+                    <a href="#" class="icon">f</a>
+                </div>
+                <div class="youtube">
+                    <a href="#" class="icon">y</a>
+                </div>
+            </div>
+
+            <h3>PATROCINADORES</h3>
+            <div id="sponsors" class="aside-box">
+
+            </div>
+
+        </aside>
+        <!-- Fin Barra Lateral -->
+
+
+        <!-- Inicio articulos -->
+        <section id="articles">
+            <h2>Últimos articulos</h2>
+            <div class="clearfix"></div>
+            <article>
+                <div class="data">
+                    <span>Fecha: 28 Feb</span>
+                    <span>Categoria: Prueba</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et sollicitudin lectus. Nulla ac
+                    aliquam ex. Curabitur porta nisi quis lectus congue, nec pharetra metus tempor. Nulla tincidunt
+                    metus a pharetra lobortis. Ut sapien nulla, luctus et velit ac, mollis pellentesque magna. Curabitur
+                    tempus turpis nec suscipit suscipit.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 28 Feb</span>
+                    <span>Categoria: Prueba</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et sollicitudin lectus. Nulla ac
+                    aliquam ex. Curabitur porta nisi quis lectus congue, nec pharetra metus tempor. Nulla tincidunt
+                    metus a pharetra lobortis. Ut sapien nulla, luctus et velit ac, mollis pellentesque magna. Curabitur
+                    tempus turpis nec suscipit suscipit.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 28 Feb</span>
+                    <span>Categoria: Prueba</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et sollicitudin lectus. Nulla ac
+                    aliquam ex. Curabitur porta nisi quis lectus congue, nec pharetra metus tempor. Nulla tincidunt
+                    metus a pharetra lobortis. Ut sapien nulla, luctus et velit ac, mollis pellentesque magna. Curabitur
+                    tempus turpis nec suscipit suscipit.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 28 Feb</span>
+                    <span>Categoria: Prueba</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et sollicitudin lectus. Nulla ac
+                    aliquam ex. Curabitur porta nisi quis lectus congue, nec pharetra metus tempor. Nulla tincidunt
+                    metus a pharetra lobortis. Ut sapien nulla, luctus et velit ac, mollis pellentesque magna. Curabitur
+                    tempus turpis nec suscipit suscipit.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 28 Feb</span>
+                    <span>Categoria: Prueba</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et sollicitudin lectus. Nulla ac
+                    aliquam ex. Curabitur porta nisi quis lectus congue, nec pharetra metus tempor. Nulla tincidunt
+                    metus a pharetra lobortis. Ut sapien nulla, luctus et velit ac, mollis pellentesque magna. Curabitur
+                    tempus turpis nec suscipit suscipit.
+                </p>
+            </article>
+            <article>
+                <div class="data">
+                    <span>Fecha: 28 Feb</span>
+                    <span>Categoria: Prueba</span>
+                </div>
+                <h4>
+                    <a href="#">Titulo del articulo</a>
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et sollicitudin lectus. Nulla ac
+                    aliquam ex. Curabitur porta nisi quis lectus congue, nec pharetra metus tempor. Nulla tincidunt
+                    metus a pharetra lobortis. Ut sapien nulla, luctus et velit ac, mollis pellentesque magna. Curabitur
+                    tempus turpis nec suscipit suscipit.
+                </p>
+            </article>
+            <article id="blog">
+                <a href="#">Ir al blog</a>
+            </article>
+        </section>
+        <!-- Fin articulos -->
+    </section>
+</body>
+
 </html>
