--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -227,6 +227,61 @@
         </section>
         <!-- Fin articulos -->
     </section>
+    <div class="clearfix"></div>
+    <!--INICIO PIE DE PÁGINA -->
+    <footer id="footer">
+
+        <div class="wrap">
+            <nav id="menu_footer">
+                <h5>MENÚ</h5>
+                <ul>
+                    <li><a href="#">INICIO</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">FORMACIÓN</a></li>
+                    <li><a href="#">CONTACTO</a></li>
+                </ul>
+            </nav>
+
+            <div id="location">
+                <h5>¿DÓNDE ESTAMOS?</h5>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3758.016516375136!2d-99.08435708544154!3d19.62659163953532!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1f3e3efed695d%3A0xc7615c1d98f0d468!2sPlaza%20Coacalco!5e0!3m2!1ses-419!2smx!4v1614533463814!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+
+            <div id="info">
+                <h5>Desarrollado con</h5>
+                <p>
+                    <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creado con HTML y CSS">
+                </p>
+                <h5>Optimizado para</h5>
+                <p id="borwsers">
+                    <a href="#">
+                        <img src="img/firefox-icon.png" alt="Firefox" title="Firefox">
+                    </a>
+                    <a href="#">
+                        <img src="img/chrome.png" alt="Chrome" title="Chrome">
+                    </a>
+                    <a href="#">
+                        <img src="img/Opera_256x256.png" alt="Opera" title="Opera">
+                    </a>
+                    <a href="#">
+                        <img src="img/safari.png" alt="Safari" title="Safari">
+                    </a>
+                    <a href="#">
+                        <img src="img/android.png" alt="Android" title="Android">
+                    </a>
+                    <a href="#">
+                        <img src="img/ios.png" alt="iOS" title="iOS">
+                    </a>
+                </p>
+                <h5>AUTOR</h5>
+                <p>
+                    &copy; Ivan Pacheco github.com/IvanPMa
+                </p>
+            </div>
+        </div>   
+    </footer>
+
+    <!-- FIN PIE DE PÁGINA-->
 </body>
 
 </html>
