--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -232,7 +232,7 @@
     <footer id="footer">
 
         <div class="wrap">
-            <nav id="menu_footer">
+            <div id="menu_footer">
                 <h5>MENÚ</h5>
                 <ul>
                     <li><a href="#">INICIO</a></li>
@@ -240,7 +240,7 @@
                     <li><a href="#">FORMACIÓN</a></li>
                     <li><a href="#">CONTACTO</a></li>
                 </ul>
-            </nav>
+            </div>
 
             <div id="location">
                 <h5>¿DÓNDE ESTAMOS?</h5>
