--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -253,7 +253,7 @@
                     <img src="img/html5-badge-h-css3-graphics-multimedia-performance-semantics.png" alt="Creado con HTML y CSS">
                 </p>
                 <h5>Optimizado para</h5>
-                <p id="borwsers">
+                <p id="browsers">
                     <a href="#">
                         <img src="img/firefox-icon.png" alt="Firefox" title="Firefox">
                     </a>
