--- a/Maquetacion-2/index.html
+++ b/Maquetacion-2/index.html
@@ -87,7 +87,7 @@
             <div id="search">
                 <form>
                     <input type="text">
-                    <input type="button" value="L" class="icon">
+                    <input type="button" value="L" class="icon" id="boton-buscar">
                 </form>
             </div>
 
