--- a/Learning SASS/index.html
+++ b/Learning SASS/index.html
@@ -9,7 +9,18 @@
         <h1> Aprendiendo SASS</h1>
         <p>
             SASS es un preprocesador CSS muy popular y potente
-        </p>
+        </p>´
+
+        <div class="caja">
+            <h1>Soy una caja</h1>
+            <p>Soy un parrafo</p>
+            <div class="info">
+                30-03-2021
+                <span class="author">
+                    Ivan Pacheco
+                </span>
+            </div>
+        </div>
     </body>
 
 </html>
