--- a/Learning SASS/index.html
+++ b/Learning SASS/index.html
@@ -36,6 +36,16 @@
             </ul>
         </div>
 
+        <div class="alert">
+            Hola soy una alerta normal
+        </div>
+        <div class="alert-danger">
+            Hola soy una alerta de peligro
+        </div>
+        <div class="alert-success">
+            Hola soy una alerta de éxtio
+        </div>
+
     </body>
 
 </html>
