--- a/Learning SASS/index.html
+++ b/Learning SASS/index.html
@@ -11,15 +11,39 @@
             SASS es un preprocesador CSS muy popular y potente
         </p>´
 
-        <div class="caja">
-            <h1>Soy una caja</h1>
-            <p>Soy un parrafo</p>
-            <div class="info">
-                30-03-2021
-                <span class="author">
-                    Ivan Pacheco
-                </span>
+        <div class="cajas">
+            <div class="caja">
+                <h1>Soy una caja</h1>
+                <p>Soy un parrafo</p>
+                <div class="info">
+                    30-03-2021
+                    <span class="author">
+                        Ivan Pacheco
+                    </span>
+                </div>
             </div>
+            <div class="caja">
+                <h1>Soy una caja</h1>
+                <p>Soy un parrafo</p>
+                <div class="info">
+                    30-03-2021
+                    <span class="author">
+                        Ivan Pacheco
+                    </span>
+                </div>
+            </div>
+            <div class="caja">
+                <h1>Soy una caja</h1>
+                <p>Soy un parrafo</p>
+                <div class="info">
+                    30-03-2021
+                    <span class="author">
+                        Ivan Pacheco
+                    </span>
+                </div>
+            </div>
+
+            <div class="clearfix"></div>
         </div>
 
         <div class="listado">
