--- a/Learning LESS/index.html
+++ b/Learning LESS/index.html
@@ -9,5 +9,19 @@
 
     <body>
         <h1> Aprendiendo LESS</h1>
+
+        <div class="informacion">
+            <ul>
+                <li>
+                    <a href="#"> Enlace 1</a>
+                </li>
+                <li>
+                    <a href="#"> Enlace 2</a>
+                </li>
+                <li>
+                    <a href="#"> Enlace 3</a>
+                </li>
+            </ul>
+        </div>
     </body>
 </html>
