--- a/Learning Flexbox/index.html
+++ b/Learning Flexbox/index.html
@@ -23,6 +23,67 @@
             <div class="caja orange">
                 Cuarta caja
             </div>
+            <div class="caja red">
+                Primera caja
+            </div>
+            <div class="caja green">
+                Segunda caja
+            </div>
+            <div class="caja blue">
+                Tercera caja
+            </div>
+            <div class="caja orange">
+                Cuarta caja
+            </div>
+            <div class="caja red">
+                Primera caja
+            </div>
+            <div class="caja green">
+                Segunda caja
+            </div>
+            <div class="caja blue">
+                Tercera caja
+            </div>
+            <div class="caja orange">
+                Cuarta caja
+            </div>
+            <div class="caja red">
+                Primera caja
+            </div>
+            <div class="caja green">
+                Segunda caja
+            </div>
+            <div class="caja blue">
+                Tercera caja
+            </div>
+            <div class="caja orange">
+                Cuarta caja
+            </div>
+            <div class="caja red">
+                Primera caja
+            </div>
+            <div class="caja green">
+                Segunda caja
+            </div>
+            <div class="caja blue">
+                Tercera caja
+            </div>
+            <div class="caja orange">
+                Cuarta caja
+            </div>
+            <div class="caja red">
+                Primera caja
+            </div>
+            <div class="caja green">
+                Segunda caja
+            </div>
+            <div class="caja blue">
+                Tercera caja
+            </div>
+            <div class="caja orange">
+                Cuarta caja
+            </div>
+            
         </div>
     </section>
     <p>
