--- a/Learning Flexbox/index.html
+++ b/Learning Flexbox/index.html
@@ -2,6 +2,7 @@
 
 <html lang="es">
     <head>
+        <meta name="viewport" content="width=device-width">
         <meta charset="utf-8">
         <title>Master en CSS</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
