--- a/Maquetacion-3/index.html
+++ b/Maquetacion-3/index.html
@@ -35,7 +35,104 @@
                 </nav>
             </header>
             <!-- Fin cabecera -->
+            <!-- Inicio contenido -->
+    
+            <section id="content"> 
+                <aside>
+                    <h2>¿Qué quieres ver?</h2>
+                    <ul>
+                        <li>
+                            <a href="#">Webs</a>
+                        </li>
+                        <li>
+                            <a href="#">Apss</a>
+                        </li>
+                        <li>
+                            <a href="#">Diseños</a>
+                        </li>
+                        <li>
+                            <a href="#">Otros</a>
+                        </li>
+                    </ul>
+                </aside>
 
+                <div id="projects">
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                    <article class="project">
+                            <div class="image-wrap">
+                                <img src="https://via.placeholder.com/250x180">
+                            </div>
+                            <div class="project-info">
+                                <a href="#">Nombre proyecto</a>
+                                <p>Sitio web</p>
+                            </div>
+                    </article>
+                </div>
+            </section>
+    
+            <!-- Fin Contenido -->
         </div>
 
         <!-- Fin container -->
