--- a/Maquetacion-3/index.html
+++ b/Maquetacion-3/index.html
@@ -38,7 +38,7 @@
             <!-- Inicio contenido -->
     
             <section id="content"> 
-                <aside>
+                <aside id="aside">
                     <h2>¿Qué quieres ver?</h2>
                     <ul>
                         <li>
