Footer con flex

--- a/Maquetacion-3/index.html
+++ b/Maquetacion-3/index.html
@@ -131,8 +131,17 @@
                     </article>
                 </div>
             </section>
-    
             <!-- Fin Contenido -->
+
+            <footer id="footer">
+                <div class="logo">
+                    Portafolio
+                </div>
+                <div class="info">
+                     Master en CSS - Iván Pacheco &copy;
+                </div>
+            </footer>
+
         </div>
 
         <!-- Fin container -->
