--- a/Learning CSS Grid/index.html
+++ b/Learning CSS Grid/index.html
@@ -26,6 +26,12 @@
             <div class="caja pink">
                  Cuarta caja
             </div>
+            <div class="caja orange">
+                Quinta caja
+            </div>
+            <div class="caja lightblue">
+                Sexto caja
+            </div>  
         </div>
         <p>
             Este parrafo no se mueve
