--- a/Learning CSS Grid/index.html
+++ b/Learning CSS Grid/index.html
@@ -10,7 +10,56 @@
     </head>
 
     <body>
+        <!--CABECERA    (arriba del todo y ocupe el 100%)
+                TITULO
+            MENU        (debajo de la cabecera y ocupa el  100%)
+            CONTENIDO   (debajo del menu y al lado de lateral)
+            LATERAL     (debajo del menu y a la derecha del contenido)
+            FOOTER      (abajo del todo y ocupe el !00%)
+        -->
         
+        <div id="website">
+            <header id ="cabecera">
+                <h1>Titulo de mi web</h1>
+            </header>
+            <nav id="menu">
+                <ul>
+                    <li> <a href="#">Inicio</a> </li>
+                    <li> <a href="#">Página 1</a> </li>
+                    <li> <a href="#">Página 2</a> </li>
+                    <li> <a href="#">Página 3</a> </li>
+                    <li> <a href="#">Contacto</a> </li>
+                </ul>
+            </nav>
+
+            <section id="contenido">
+                <article>  
+                    Articulo 1
+                </article>
+                <article>  
+                    Articulo 2
+                </article>
+                <article>  
+                    Articulo 3
+                </article>
+                <article>  
+                    Articulo 4
+                </article>
+                <article>  
+                    Articulo 5
+                </article>
+            </section>
+
+            <aside id="lateral">
+                <h2>Barra lateral</h2>
+            </aside>
+
+            <footer id="pie-pagina">
+                Master en CSS - Ivan Pacheco &copy;
+            </footer>
+        </div>
+
+        <hr>
         <h1>Master en CSS</h1>
         <h2>Hoy aprendemos CSS Grid una nueva forma de maquetar web </h2>
         <div class="layout">
