--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -70,6 +70,9 @@
                     </div>
 
                 </section>
+                <footer class="col-lg-12 bg-info">
+                    Master en CSS - Ivan Pacheco Maldonado &copy;
+                </footer>
             </div>
         </div>
 
