--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -46,7 +46,7 @@
                                         Producto
                                     </div>
                                 </div>
-                                <div class="row">
+                                <div class="row mt-5">
                                     <div class="item col bg-primary m-2">
                                         Producto
                                     </div>
