alineacion horizontal de elementos

--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -56,7 +56,18 @@
                                     <div class="item col bg-danger m-2">
                                         Producto
                                     </div>
-                                    <div class="item col bg-success m-2">
+                                    <div class="item col-4 bg-success m-2">
+                                        Producto
+                                    </div>
+                                </div>
+                                    <div class="row mt-1 justify-content-between">
+                                    <div class="item col-3 bg-primary">
+                                        Producto
+                                    </div>
+                                    <div class="item col-3 bg-warning">
+                                        Producto
+                                    </div> 
+                                    <div class="item col-3 bg-primary">
                                         Producto
                                     </div>
                                 </div>
