--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no" >
         <title> Aprendiendo Bootstrap</title>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles.css">
