--- a/Learning Bootstrap/herramientas.html
+++ b/Learning Bootstrap/herramientas.html
@@ -7,10 +7,11 @@
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     </head>
     <body>
-        <h1>Herramientas disponibles en Bootstrap 4</h1>
-
+        
         <div class="container" style="height: 500px;">
-            <div class="caja w-25 h-25">
+            <h1>Herramientas disponibles en Bootstrap 4</h1>
+            <hr>
+            <div class="caja w-25 h-25 border border-success rounded-0">
                 Esto es una caja 
             </div>
         </div>
