--- a/Learning Bootstrap/herramientas.html
+++ b/Learning Bootstrap/herramientas.html
@@ -29,6 +29,8 @@
             <div class="clearfix"></div>
 
             <h2>Este es el fin del contenedor</h2>
+            
+            <p class="display-4 font-italic text-center text-lowercase"> Esto es un texto</p>
         </div>
 
         <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
