--- a/Learning Bootstrap/herramientas.html
+++ b/Learning Bootstrap/herramientas.html
@@ -31,6 +31,14 @@
             <h2>Este es el fin del contenedor</h2>
             
             <p class="display-4 font-italic text-center text-lowercase"> Esto es un texto</p>
+
+            <pre>
+                <code>
+                    var mensaje = "Hola Mundo";
+                    console.log(mensaje);
+                </code>
+            </pre>
+
         </div>
 
         <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
