--- a/Learning Bootstrap/herramientas.html
+++ b/Learning Bootstrap/herramientas.html
@@ -38,6 +38,8 @@
                     console.log(mensaje);
                 </code>
             </pre>
+            <p><samp> Hola Mundo</samp></p>
+                <kbd> alt + f4 </kbd> aumenta los fps
 
         </div>
 
