--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -95,6 +95,17 @@
                   </button>
                 </div>
 
+                <h2>
+                  <span class="badge badge-success">Nuevo </span>
+                  Componentes de bootstrap
+                </h2>
+
+                <p>
+                  Uso de bagets en Bootstrap
+                  <a href="#"  class="badge badge-danger badge-pill">
+                   Este es un nuevo parrafo  
+                  </a>
+                </p>
               </div>
             </div>
 
