--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -109,6 +109,37 @@
               </div>
             </div>
 
+
+            <div class="row col-md-8">
+
+              <div class="card col mr-3 p-0">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div class="card-body">
+                  <h3 class="card-title">Tarjeta 1</h3>
+                  <p class="card-text">
+                    Hola entra a este articulo y aprenderas bootstrap
+                  </p>
+                </div>
+              </div>
+              <div class="card col mr-3 p-0">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div class="card-body">
+                  <h3 class="card-title">Tarjeta 1</h3>
+                  <p class="card-text">
+                    Hola entra a este articulo y aprenderas bootstrap
+                  </p>
+                </div>
+              </div>
+              <div class="card col mr-3 p-0">
+                <img class="card-img-top img-fluid" src="https://via.placeholder.com/300x200">
+                <div class="card-body">
+                  <h3 class="card-title">Tarjeta 1</h3>
+                  <p class="card-text">
+                    Hola entra a este articulo y aprenderas bootstrap
+                  </p>
+                </div>
+              </div>
+
         </div>
         <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
