--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -162,7 +162,7 @@
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">¿Estas seguro  de queere cerrar esta ventana?</h5>
+                <h5 class="modal-title" id="exampleModalLabel">¿Estas seguro de queere cerrar esta ventana?</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -216,8 +216,48 @@
           <a href="#" class="btn btn-warning">Entrar</a>
         </div>
       </div>
+
+      <div class="clearfix"></div>
+
+
     </div>
 
+    <div class="row">
+      <nav aria-label="pagination" class="m-3">
+        <ul class="pagination">
+          <li class="page-item">
+            <a class="page-link" href="#">
+              &laquo;
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">
+              1
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">
+              2
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">
+              3
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">
+              4
+            </a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" href="#">
+              &raquo;
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
 
     <div class="row col-md-8">
       <div class="jumbotron my-3">
