--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -178,8 +178,20 @@
           </div>
         </div>
 
+        <!-- COLLAPSE -->
+      <a class="btn btn-success mt-3" data-toggle="collapse" href="#informacion" role="button">
+        Mostrar inforamcion 
+      </a>
+
+      <div class="collapse" id="informacion">
+        <div class="card card-body bg-dark text-white mt-2">
+          Esta es la inforamcion oculta
+        </div>
       </div>
 
+      </div>
+
+      
 
     </div>
 
