--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -347,6 +347,60 @@
         </p>
       </div>
     </div>
+    
+    <table class="table table-border table-hover my-5">
+      <thead class="thead-dark">
+        <tr>
+          <th>
+            Nombre
+          </th>
+          <th>
+            Apellidos
+          </th>
+          <th>
+            Edad
+          </th>
+        </tr>
+      </thead>
+      
+      <tr>
+        <td>
+          Juan
+        </td>
+        <td>
+          Lopez
+        </td>
+        <td>
+          40
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          David
+        </td>
+        <td>
+          Martinez
+        </td>
+        <td>
+          27
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          Paco
+        </td>
+        <td>
+          Jimenez
+        </td>
+        <td>
+          48
+        </td>
+      </tr>
+
+    </table>
+  </div>
 
     <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
     <script type="text/javascript" src="js/popper.min.js"></script>
